--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/Logo_email-circle.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="./assets/JV_circle_Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
